name:                {{ project }}
version:             {{ version }}
-- synopsis:
-- description:
homepage:            https://github.com/{{ github-username }}/{{ project }}#readme
license:             {{ license }}
license-file:        LICENSE
author:              {{ name }}
maintainer:          {{ email }}
copyright:           Copyright: (c) {{ year }} {{ name }}
--category:            Web
build-type:          Simple
extra-source-files:  mad-src/{{ project }}.mad
extra-doc-files:     README.md
cabal-version:       >=1.18

Flag development {
  Description: Enable `-Werror`
  manual: True
  default: False
}

executable {{ project }}
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , miso == 0.9.*
                     , madlang >= 3.1.2.0
                     , text
                     , containers
                     , servant <= 0.11
  default-language:    Haskell2010
  if flag(development)
    ghc-options: -Werror
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat

source-repository head
  type:     git
  location: https://github.com/{{ github-username }}/{{ project }}
